# bosler.it

./: .gitignore  README.md
backend/: Cargo.toml  Makefile.toml
backend/res/users/files/t4/: main.c  numquad.S
backend/res/users/files/t6/: toupper_simd.tar
backend/res/users/files/t6/toupper_simd/: Makefile  main.c  toupper.S
backend/src/: debug.rs  main.rs  types.rs
backend/src/website/: mod.rs
backend/src/website/data_repository/: mod.rs
backend/src/website/handlers/: index.html  mod.rs
backend/src/website/utils/: mod.rs
frontend/: .eslintrc.cjs  Makefile.toml  components.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.config.json  tsconfig.vitest.json  vite.config.ts
frontend/src/: App.vue  main.ts  types.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/Files/: File.vue
frontend/src/components/Home/: ButtonArray.vue  HiHeader.vue  RotatingEarth.vue
frontend/src/plugins/: vuetify.ts
frontend/src/routing/: router.ts  routes.ts
frontend/src/views/: FilePage.vue  Home.vue
