[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# Enable the "web" feature to compile the web server.

# If compiling on a system without OpenSSL installed, or cross-compiling for a different
# architecture, enable this feature to compile OpenSSL as part of the build.
# See https://docs.rs/openssl/#vendored for more.
#static_ssl = ['openssl/vendored']


[dependencies]
actix-web = {version = "4.2.1", features = ["rustls"]}
actix-files = "0.6.2"
local-ip-address = "0.4.9"
actix-web-lab = "0.18.8"
rustls = "0.20.7"
chrono = {version = "0.4.24", features = ["serde"]}
path-clean = "0.1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
#native-tls = "0.2.11"
rustls-pemfile = "1.0.1"
walkdir = "2.3.2"
zip = "0.5.13"
#openssl = { version = '0.10', features = ["vendored"] }
#acme-lib = "0.8.2"
