[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "debug"
path = "src/debug.rs"
test = false

[dependencies]
actix-web = {version = "4.2.1", features = ["rustls"]}
actix-files = "0.6.2"
local-ip-address = "0.5.1"
actix-web-lab = {version = "0.19.1", features = ["spa"]}
rustls = "0.21.0"
chrono = {version = "0.4.24", features = ["serde"]}
path-clean = "1.0.1"
parking_lot = "0.12.1"
mongodb = {version = "2.5.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"
rustls-pemfile = "1.0.1"
walkdir = "2.3.2"
zip = "0.6.4"
